--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
+ASSET_URL=null
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
