--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,5 @@ WEB_DEMO=false #website-demo
 KODE_DESA= #required
 HOST_PREMIUM=https://layanan.opendesa.id
 TOKEN_PREMIUM= #required
+
+MYSQLDUMP_PATH='/usr/bin/mysqldump'
