--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ HOST_PREMIUM=https://layanan.opendesa.id
 TOKEN_PREMIUM= #required
 
 MYSQLDUMP_PATH='/usr/bin/mysqldump'
+
+APP_PANTAU=https://pantau.opensid.my.id
+TOKEN_PANTAU=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6bnVsbCwidGltZXN0YW1wIjoxNjAzNDY2MjM5fQ.HVCNnMLokF2tgHwjQhSIYo6-2GNXB4-Kf28FSIeXnZw
