modify: [deploy-pbb-rilis]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,21 @@
-name: Deploy PBB with Ansible
+name: Deploy PBB Rilis with Ansible
 
 on:
-  release:
-    types: [published]
+  pull_request:
+    branches: [main]
+
+permissions:
+  contents: read
+
+concurrency:
+  group: deploy-pbb-rilis
+  cancel-in-progress: true
 
 jobs:
   deploy:
-    name: Deploy to Production Server
+    # rilis dari branch 'main' & bukan prerelease
+    # if: github.event.release.target_commitish == 'main' && github.event.release.prerelease == false
+    name: Deploy PBB Rilis to Production Server
     runs-on: ubuntu-latest
 
     steps:
@@ -14,12 +23,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy via SSH using appleboy/ssh-action
-        uses: appleboy/ssh-action@v1.0.0
+        uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.CICD_SERVER_IP }}
           username: ${{ secrets.CICD_SERVER_USER }}
           key: ${{ secrets.CICD_SERVER_PRIVATE_KEY }}
           port: ${{ secrets.CICD_SERVER_PORT }}
           script: |
-            cd /opt/ansible
-            ansible-playbook -v -i inventories/production/inventory.yml playbooks/deploy-pbb.yml
+            set -euo pipefail
+            cd ${{ secrets.CICD_SERVER_PATH }}
+            ansible-playbook -i inventories/production/inventory.yml playbooks/deploy-pbb-rilis.yml
