--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,39 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
-    # rilis dari branch 'main' & bukan prerelease
+  deploy-production:
+    # Hanya jalan kalau rilis dari branch main & bukan prerelease
     if: github.event.release.target_commitish == 'main' && github.event.release.prerelease == false
-    name: Deploy PBB Rilis to Production Server
+    name: Deploy PBB Rilis to Production Server (Release)
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Ansible Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Deploy via SSH using appleboy/ssh-action
+      - name: Deploy via SSH (Release)
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.CICD_SERVER_IP }}
+          username: ${{ secrets.CICD_SERVER_USER }}
+          key: ${{ secrets.CICD_SERVER_PRIVATE_KEY }}
+          port: ${{ secrets.CICD_SERVER_PORT }}
+          script: |
+            set -euo pipefail
+            cd ${{ secrets.CICD_SERVER_PATH }}
+            nohup ansible-playbook -i inventories/production/inventory.yml playbooks/deploy-pbb-rilis.yml --extra-vars "release_tag=${{ github.event.release.tag_name }}" > ~/ansible-update-pbb-rilis.log 2>&1 &
+
+  deploy-prerelease:
+    # Hanya jalan kalau rilis dari branch main & prerelease = true
+    if: github.event.release.target_commitish == 'main' && github.event.release.prerelease == true
+    name: Deploy PBB Rilis to Production Server (Pre-Release)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Ansible Code
+        uses: actions/checkout@v4
+
+      - name: Deploy via SSH (Pre-Release)
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.CICD_SERVER_IP }}
