--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=opensid_pbb
+DB_DATABASE=testing_db
 DB_USERNAME=root
-DB_PASSWORD=
-DB_MIGRATE=false
+DB_PASSWORD=secret
+DB_MIGRATE=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
