--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build "
+        "build": "vite build ",
+        "test:e2e": "playwright test",
+        "test:e2e:headed": "playwright test --headed",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:debug": "playwright test --debug",
+        "test:e2e:report": "playwright show-report"
     },
     "devDependencies": {
+        "@playwright/test": "^1.54.1",
         "@rollup/plugin-inject": "^5.0.3",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^2.0.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.65.1",
-        "vite": "^4.0.0"
+        "vite": "^7.1.4"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
