--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME="Aplikasi PBB"
-APP_ENV=production
+APP_ENV=development
 APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
@@ -70,3 +70,19 @@ MYSQLDUMP_PATH='/usr/bin/mysqldump'
 
 APP_PANTAU=https://pantau.opensid.my.id
 TOKEN_PANTAU=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6bnVsbCwidGltZXN0YW1wIjoxNjAzNDY2MjM5fQ.HVCNnMLokF2tgHwjQhSIYo6-2GNXB4-Kf28FSIeXnZw
+
+# OTP Configuration
+OTP_TOKEN_EXPIRES_MINUTES=5
+OTP_MAX_VERIFICATION_ATTEMPTS=3
+
+# OTP Rate Limiter Configuration
+OTP_SETUP_MAX_ATTEMPTS=3
+OTP_SETUP_DECAY_SECONDS=300
+OTP_VERIFY_MAX_ATTEMPTS=5
+OTP_VERIFY_DECAY_SECONDS=300
+OTP_RESEND_MAX_ATTEMPTS=2
+OTP_RESEND_DECAY_SECONDS=30
+
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=8357982193:AAHLnTOhRAgDL4oKQ68NA1k8OB_V1FAUD2Q
+TELEGRAM_BOT_NAME=@opendktest_bot
